Ensemble models, stacking with known good configs ( still running), soft voting with previous models ( subpar submission)

--- a/train_lr_anova.ipynb
+++ b/train_lr_anova.ipynb
@@ -22,9 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import f_classif\n",
-    "\n",
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import SelectPercentile\n",
     "\n",
@@ -206,9 +204,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# submitModel(y_test_results,'test_predictions_anova_lr_f1_0354_c01')\n",
+    "# submitModel(best_pipeline.predict(X_test),'test_predictions_anova_lr_f1_0354_c01')\n",
     "# saveModel(best_pipeline,\"lr_anova_local_0354_submission_039047\")\n",
-    "# loadedm = loadModel(\"best_models/lr_anova_local_0354_submission_039047.pkl\")"
+    "# loadedm = loadModel(\"best_models/lr_anova_local_0354_submission_039047.pkl\")\n"
    ]
   }
  ],
