--- a/train_svm.ipynb
+++ b/train_svm.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +217,61 @@
     "#saveModel(best_pipeline,\"svc_mf1_0347_sigmoid_submission_028741\")\n",
     "\n",
     "# loadedm = loadModel(\"best_models/lr_anova_local_0354_submission_039047.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Mean Macro F1: 0.343\n",
+      "Best Config: {'anova__k': 2000, 'scaler': MinMaxScaler(), 'svc__C': 100, 'svc__gamma': 'scale', 'svc__kernel': 'sigmoid'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Experimentação com filtering e SVM, não teve grandes resultados\n",
+    "\n",
+    "from sklearn.feature_selection import f_classif\n",
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import SelectPercentile\n",
+    "\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=123)\n",
+    "model = SVC(random_state=123)\n",
+    "\n",
+    "fs = SelectKBest(score_func=f_classif)\n",
+    "pipeline = Pipeline( [('anova',fs), ('scaler', StandardScaler()),  ('svc', model)])\n",
+    "\n",
+    "grid = dict()\n",
+    "\n",
+    "# sphx_glr_auto_examples_model_selection_plot_nested_cross_validation_iris.py\n",
+    "grid = {\n",
+    "       # 'scaler' : [None, StandardScaler(),MinMaxScaler(),RobustScaler()],\n",
+    "       # 'anova__k' : [10,15,100,1000,None],\n",
+    "         'anova__k' : [10,500,1000,1500,2000],\n",
+    "        \n",
+    "        'scaler' : [MinMaxScaler()],\n",
+    "       # 'svc__kernel': ['linear', 'rbf', 'poly','sigmoid'], # Kernels to test\n",
+    "        #'svc__class_weight': ['balanced',None], # balanced nunca me deu melhor resultados\n",
+    "        'svc__kernel': ['sigmoid'],\n",
+    "          'svc__gamma': ['scale'],\n",
+    "      #  'svc__gamma': ['scale', 'auto', 0.001,0.01, 0.1, 1], # Gamma values ‘rbf’, ‘poly’, and ‘sigmoid’\n",
+    "        # 'svc__degree': [1,2, 3, 4],                # Degree for 'poly' kernel\n",
+    "        # 'svc__coef0': [0.0, 0.1, 0.5, 1.0, 2.0],#  Independent term in kernel function. It is only significant in 'poly' and 'sigmoid'.\n",
+    "        'svc__C':[0.01,0.1,1,10,100,1000] # smaller values means stronger regularizaztion, \n",
+    "    }\n",
+    "\n",
+    "\n",
+    "\n",
+    "search = GridSearchCV(pipeline, grid, scoring='f1_macro', n_jobs=-1, cv=cv, refit=True)\n",
+    "results = search.fit(X_train, y_train)\n",
+    "\n",
+    "print('Best Mean Macro F1: %.3f' % results.best_score_)\n",
+    "print('Best Config: %s' % results.best_params_)"
    ]
   }
  ],
