Final commit. Added eda hipocamp vs control dataset. Reorganized files

--- a/train_soft_voting.ipynb
+++ b/train_soft_voting.ipynb
@@ -64,37 +64,17 @@
     "final_probs = final_probs/len(models_names)\n",
     "\n",
     "\n",
-    "results = classes[np.argmax(final_probs, axis=1)]\n",
-    "# TODO: 'svc_mf1_0347_sigmoid_submission_028741' exige um preprocessamento diferente, "
+    "results = classes[np.argmax(final_probs, axis=1)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "submitModel(results,'test_softvoting')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.04132462 0.55295435 0.03814546 0.07022628 0.2973493 ]\n",
-      "[0.05857917 0.46714049 0.03944534 0.19295329 0.2418817 ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "#np.max(models_probs[1][1],models_probs[0][1])"
+    "# submitModel(results,'test_softvoting')\n"
    ]
   }
  ],
