--- a/train_stacking.ipynb
+++ b/train_stacking.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +73,14 @@
     "bagg_dt_model = BaggingClassifier(estimator= dt_model, bootstrap= True,n_estimators=60)\n",
     "bagg_rf_model = RandomForestClassifier(bootstrap= True, max_depth= 10,max_features = 'sqrt', min_samples_leaf=4, min_samples_split= 10, n_estimators= 100, random_state=123)\n",
     "\n",
-    "# bagg_gb_model = GradientBoostingClassifier( learning_rate = 0.10690382853418266, max_depth = 6,\n",
-    "#                                       max_features = None, min_samples_leaf = 8, min_samples_split = 14,\n",
-    "#                                       n_estimators = 296, subsample = 0.9503681331729179, random_state=123)\n",
+    "bagg_gb_model = GradientBoostingClassifier( learning_rate = 0.10690382853418266, max_depth = 6,\n",
+    "                                      max_features = None, min_samples_leaf = 8, min_samples_split = 14,\n",
+    "                                      n_estimators = 296, subsample = 0.9503681331729179, random_state=123)\n",
     "\n",
-    "# xgb_model = XGBClassifier( colsample_bylevel= 0.7005087783306018, colsample_bytree = 0.8136585046688083, gamma = 0.16207544668977053,\n",
-    "#                            learning_rate = 0.17342778308617596, max_depth = 7, min_child_weight = 1, n_estimators = 118, \n",
-    "#                            objective = 'multi:softmax', reg_alpha = 0.6317920176870504, reg_lambda = 0.44025717806407627, \n",
-    "#                            scale_pos_weight = 1.8372648456358434, subsample = 0.8561650906943812, random_state=123 )\n",
+    "xgb_model = XGBClassifier( colsample_bylevel= 0.7005087783306018, colsample_bytree = 0.8136585046688083, gamma = 0.16207544668977053,\n",
+    "                           learning_rate = 0.17342778308617596, max_depth = 7, min_child_weight = 1, n_estimators = 118, \n",
+    "                           objective = 'multi:softmax', reg_alpha = 0.6317920176870504, reg_lambda = 0.44025717806407627, \n",
+    "                           scale_pos_weight = 1.8372648456358434, subsample = 0.8561650906943812, random_state=123 )\n",
     "\n",
     "lr_pipe = Pipeline(steps=[('anova',SelectKBest(score_func=f_classif, k=8)),  ('scaler', MinMaxScaler()),  ('lr', LogisticRegression(C =100, max_iter=1000,solver='newton-cg'))])\n",
     "\n",
@@ -89,7 +89,7 @@
     "\n",
     "\n",
     "estimators = [ (\"bagg_dt\", bagg_dt_model), (\"bagg_rf\",bagg_rf_model), \n",
-    "              #(\"bagg_gb\" , bagg_gb_model), ( \"xgb_model\",xgb_model)\n",
+    "               (\"bagg_gb\" , bagg_gb_model), ( \"xgb_model\",xgb_model),\n",
     "         #     (\"SVC\", SVC(random_state=123)), \n",
     "              (\"lr_pipe\", lr_pipe),\n",
     "              (\"KNN\", KNeighborsClassifier(metric='euclidean', n_neighbors=7,weights='uniform')),\n",
@@ -99,14 +99,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 30 folds for each of 1 candidates, totalling 30 fits\n",
+      "Fitting 30 folds for each of 1 candidates, totalling 30 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gusta\\.conda\\envs\\mypython3v\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [03:39:14] WARNING: D:\\bld\\xgboost-split_1732667012888\\work\\src\\learner.cc:740: \n",
+      "Parameters: { \"scale_pos_weight\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "c:\\Users\\gusta\\.conda\\envs\\mypython3v\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [03:49:05] WARNING: D:\\bld\\xgboost-split_1732667012888\\work\\src\\learner.cc:740: \n",
+      "Parameters: { \"scale_pos_weight\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "c:\\Users\\gusta\\.conda\\envs\\mypython3v\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [03:49:12] WARNING: D:\\bld\\xgboost-split_1732667012888\\work\\src\\learner.cc:740: \n",
+      "Parameters: { \"scale_pos_weight\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "c:\\Users\\gusta\\.conda\\envs\\mypython3v\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [03:49:19] WARNING: D:\\bld\\xgboost-split_1732667012888\\work\\src\\learner.cc:740: \n",
+      "Parameters: { \"scale_pos_weight\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "c:\\Users\\gusta\\.conda\\envs\\mypython3v\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [03:49:25] WARNING: D:\\bld\\xgboost-split_1732667012888\\work\\src\\learner.cc:740: \n",
+      "Parameters: { \"scale_pos_weight\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "c:\\Users\\gusta\\.conda\\envs\\mypython3v\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [03:49:32] WARNING: D:\\bld\\xgboost-split_1732667012888\\work\\src\\learner.cc:740: \n",
+      "Parameters: { \"scale_pos_weight\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "StackingClassifier(estimators=[('bagg_dt',\n",
       "                                BaggingClassifier(estimator=DecisionTreeClassifier(max_depth=4,\n",
       "                                                                                   random_state=2022),\n",
@@ -116,6 +152,13 @@
       "                                                       min_samples_leaf=4,\n",
       "                                                       min_samples_split=10,\n",
       "                                                       random_state=123)),\n",
+      "                               ('bagg_gb',\n",
+      "                                GradientBoostingClassifier(learning_rate=0.10690382853418266,\n",
+      "                                                           max_depth=6,\n",
+      "                                                           min_samples_leaf=8...\n",
+      "                                              n_estimators=118, n_jobs=None,\n",
+      "                                              num_parallel_tree=None,\n",
+      "                                              objective='multi:softmax', ...)),\n",
       "                               ('lr_pipe',\n",
       "                                Pipeline(steps=[('anova', SelectKBest(k=8)),\n",
       "                                                ('scaler', MinMaxScaler()),\n",
@@ -127,7 +170,7 @@
       "                                KNeighborsClassifier(metric='euclidean',\n",
       "                                                     n_neighbors=7))],\n",
       "                   final_estimator=RandomForestClassifier(random_state=123))\n",
-      "Best Mean Macro F1: 0.302\n",
+      "Best Mean Macro F1: 0.327\n",
       "Best Config: {'final_estimator': RandomForestClassifier(random_state=123)}\n"
      ]
     }
@@ -136,7 +179,7 @@
     "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=123)\n",
     "\n",
     "\n",
-    "st_model = StackingClassifier(estimators=estimators,final_estimator=LogisticRegression())\n",
+    "st_model = StackingClassifier(estimators=estimators,final_estimator=RandomForestClassifier())\n",
     "\n",
     "# st_model.fit(X_train, y_train)\n",
     "\n",
@@ -165,39 +208,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['MCI-AD', 'CN-CN', 'CN-CN', 'CN-CN', 'CN-CN', 'MCI-MCI', 'AD-AD',\n",
-       "       'CN-CN', 'AD-AD', 'MCI-AD', 'CN-CN', 'CN-CN', 'CN-CN', 'CN-CN',\n",
-       "       'MCI-AD', 'MCI-MCI', 'CN-CN', 'MCI-AD', 'MCI-MCI', 'AD-AD',\n",
-       "       'CN-CN', 'MCI-MCI', 'CN-CN', 'MCI-MCI', 'MCI-AD', 'MCI-MCI',\n",
-       "       'AD-AD', 'AD-AD', 'CN-CN', 'CN-CN', 'CN-CN', 'MCI-MCI', 'AD-AD',\n",
-       "       'AD-AD', 'CN-CN', 'CN-CN', 'MCI-MCI', 'MCI-MCI', 'CN-CN', 'CN-CN',\n",
-       "       'MCI-MCI', 'CN-CN', 'AD-AD', 'CN-CN', 'CN-CN', 'MCI-AD', 'MCI-MCI',\n",
-       "       'CN-CN', 'MCI-AD', 'MCI-MCI', 'MCI-MCI', 'CN-CN', 'AD-AD', 'AD-AD',\n",
-       "       'CN-CN', 'AD-AD', 'CN-CN', 'MCI-MCI', 'AD-AD', 'CN-CN', 'CN-CN',\n",
-       "       'MCI-AD', 'CN-CN', 'AD-AD', 'CN-CN', 'CN-CN', 'CN-CN', 'CN-CN',\n",
-       "       'AD-AD', 'CN-CN', 'MCI-MCI', 'AD-AD', 'CN-CN', 'MCI-AD', 'AD-AD',\n",
-       "       'MCI-AD', 'CN-CN', 'CN-CN', 'CN-CN', 'CN-CN', 'CN-CN', 'MCI-AD',\n",
-       "       'AD-AD', 'CN-CN', 'AD-AD', 'MCI-MCI', 'AD-AD', 'MCI-MCI', 'CN-CN',\n",
-       "       'CN-CN', 'AD-AD', 'CN-CN', 'MCI-MCI', 'CN-CN', 'CN-CN', 'MCI-AD',\n",
-       "       'AD-AD', 'MCI-MCI', 'CN-CN', 'AD-AD'], dtype=object)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "grid_rf.best_estimator_.predict(X_test)\n",
+    "# StackingClassifier(estimators=[('bagg_dt',\n",
+    "#                                 BaggingClassifier(estimator=DecisionTreeClassifier(max_depth=4,\n",
+    "#                                                                                    random_state=2022),\n",
+    "#                                                   n_estimators=60)),\n",
+    "#                                ('bagg_rf',\n",
+    "#                                 RandomForestClassifier(max_depth=10,\n",
+    "#                                                        min_samples_leaf=4,\n",
+    "#                                                        min_samples_split=10,\n",
+    "#                                                        random_state=123)),\n",
+    "#                                ('bagg_gb',\n",
+    "#                                 GradientBoostingClassifier(learning_rate=0.10690382853418266,\n",
+    "#                                                            max_depth=6,\n",
+    "#                                                            min_samples_leaf=8...\n",
+    "#                                               n_estimators=118, n_jobs=None,\n",
+    "#                                               num_parallel_tree=None,\n",
+    "#                                               objective='multi:softmax', ...)),\n",
+    "#                                ('lr_pipe',\n",
+    "#                                 Pipeline(steps=[('anova', SelectKBest(k=8)),\n",
+    "#                                                 ('scaler', MinMaxScaler()),\n",
+    "#                                                 ('lr',\n",
+    "#                                                  LogisticRegression(C=100,\n",
+    "#                                                                     max_iter=1000,\n",
+    "#                                                                     solver='newton-cg'))])),\n",
+    "#                                ('KNN',\n",
+    "#                                 KNeighborsClassifier(metric='euclidean',\n",
+    "#                                                      n_neighbors=7))],\n",
+    "#                    final_estimator=RandomForestClassifier(random_state=123))\n",
+    "# Best Mean Macro F1: 0.327\n",
+    "# Best Config: {'final_estimator': RandomForestClassifier(random_state=123)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#grid_rf.best_estimator_.predict(X_test)\n",
     "\n",
-    "submitModel(grid_rf.best_estimator_.predict(X_test),'test_predictions_stacking4_f1_')\n",
-    "saveModel(grid_rf.best_estimator_,\"stacking4_f1_submission_039047\")"
+    "#submitModel(grid_rf.best_estimator_.predict(X_test),'test_predictions_stacking_f1_0327')\n",
+    "#saveModel(grid_rf.best_estimator_,\"stacking4_f1_0327\")"
    ]
   }
  ],
