--- a/train_svm.ipynb
+++ b/train_svm.ipynb
@@ -99,12 +99,14 @@
    "outputs": [],
    "source": [
     "grid = {\n",
-    "       # 'svc__kernel': ['linear', 'rbf', 'poly','sigmoid'], # Kernels to test\n",
+    "        'scaler' : [None, StandardScaler(),MinMaxScaler(),RobustScaler()],\n",
+    "        'svc__kernel': ['linear', 'rbf', 'poly','sigmoid'], # Kernels to test\n",
+    "        #'svc__class_weight': ['balanced',None], # balanced nunca me deu melhor resultados\n",
     "        'svc__kernel': ['poly'],\n",
-    "        'svc__gamma': ['scale', 'auto', 0.01, 0.1, 1], # Gamma values\n",
-    "        'svc__degree': [2, 3, 4],                # Degree for 'poly' kernel\n",
-    "        #'svc__' : []\n",
-    "        'svc__C':[0.1,1,10] # smaller values means stronger regularizaztion, \n",
+    "        'svc__gamma': ['scale', 'auto', 0.001,0.01, 0.1, 1], # Gamma values ‘rbf’, ‘poly’, and ‘sigmoid’\n",
+    "        'svc__degree': [1,2, 3, 4],                # Degree for 'poly' kernel\n",
+    "         'svc__coef0': [0.0, 0.1, 0.5, 1.0, 2.0],#  Independent term in kernel function. It is only significant in 'poly' and 'sigmoid'.\n",
+    "        'svc__C':[0.01,0.1,1,10,100,1000] # smaller values means stronger regularizaztion, \n",
     "    }\n",
     "############# 'linear only'\n",
     "#Best Mean Macro F1: 0.309\n",
